--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d7074">  <td>22/01/08 10:12:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:testcases.TC002_Registration@544a2ea6]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1237598030</td>   <td></td> </tr>
-<tr bgcolor="6d7074">  <td>22/01/08 10:11:59</td>   <td>-12872</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.invokeBrowser()[pri:0, instance:testcases.TC002_Registration@544a2ea6]">&gt;&gt;invokeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1237598030</td>   <td></td> </tr>
-<tr bgcolor="84f66b">  <td>22/01/08 10:12:08</td>   <td>-4433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registerWithMandatoryField()[pri:2, instance:testcases.TC002_Registration@544a2ea6]">registerWithMandatoryField</td> 
-  <td>main@1237598030</td>   <td></td> </tr>
-<tr bgcolor="84f66b">  <td>22/01/08 10:12:05</td>   <td>-6972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registrationFieldValidation()[pri:1, instance:testcases.TC002_Registration@544a2ea6]">registrationFieldValidation</td> 
-  <td>main@1237598030</td>   <td></td> </tr>
+<tr bgcolor="6d7074">  <td>22/01/09 09:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:testscenarios.TC002_Registration@704d6e83]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@611563982</td>   <td></td> </tr>
+<tr bgcolor="6d7074">  <td>22/01/09 09:33:42</td>   <td>-20920</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.invokeBrowser()[pri:0, instance:testscenarios.TC002_Registration@704d6e83]">&gt;&gt;invokeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@611563982</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/09 09:33:59</td>   <td>-3499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registerWithMandatoryField(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC002_Registration@704d6e83]">registerWithMandatoryField</td> 
+  <td>main@611563982</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/09 09:33:59</td>   <td>-3499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registerWithMandatoryField(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC002_Registration@704d6e83]">registerWithMandatoryField</td> 
+  <td>main@611563982</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/09 09:33:59</td>   <td>-3499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registerWithMandatoryField(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC002_Registration@704d6e83]">registerWithMandatoryField</td> 
+  <td>main@611563982</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/09 09:33:47</td>   <td>-15288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registrationFieldValidation()[pri:1, instance:testscenarios.TC002_Registration@704d6e83]">registrationFieldValidation</td> 
+  <td>main@611563982</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/09 09:33:42</td>   <td>-20952</td> <td>&nbsp;</td><td title="&gt;&gt;TC002_Registration.testCasesetUp()[pri:0, instance:testscenarios.TC002_Registration@704d6e83]">&gt;&gt;testCasesetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@611563982</td>   <td></td> </tr>
 </table>
