--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,22 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="707e96">  <td>22/01/08 10:14:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:testcases.TC002_Registration@43a0cee9]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733672688</td>   <td></td> </tr>
-<tr bgcolor="707e96">  <td>22/01/08 10:14:28</td>   <td>-10392</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:testcases.TC001_Login@2e3fc542]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733672688</td>   <td></td> </tr>
-<tr bgcolor="707e96">  <td>22/01/08 10:14:20</td>   <td>-18102</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.invokeBrowser()[pri:0, instance:testcases.TC001_Login@2e3fc542]">&gt;&gt;invokeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733672688</td>   <td></td> </tr>
-<tr bgcolor="707e96">  <td>22/01/08 10:14:29</td>   <td>-9601</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.invokeBrowser()[pri:0, instance:testcases.TC002_Registration@43a0cee9]">&gt;&gt;invokeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733672688</td>   <td></td> </tr>
-<tr bgcolor="84f66b">  <td>22/01/08 10:14:26</td>   <td>-12593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Login.loginFieldValidation()[pri:1, instance:testcases.TC001_Login@2e3fc542]">loginFieldValidation</td> 
-  <td>main@733672688</td>   <td></td> </tr>
-<tr bgcolor="84f66b">  <td>22/01/08 10:14:28</td>   <td>-10798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Login.loginWithInValidCredential()[pri:3, instance:testcases.TC001_Login@2e3fc542]">loginWithInValidCredential</td> 
-  <td>main@733672688</td>   <td></td> </tr>
-<tr bgcolor="84f66b">  <td>22/01/08 10:14:26</td>   <td>-12261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Login.loginWithValidCredential()[pri:2, instance:testcases.TC001_Login@2e3fc542]">loginWithValidCredential</td> 
-  <td>main@733672688</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>22/01/08 10:14:34</td>   <td>-4123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registerWithMandatoryField()[pri:2, instance:testcases.TC002_Registration@43a0cee9]">registerWithMandatoryField</td> 
-  <td>main@733672688</td>   <td></td> </tr>
-<tr bgcolor="e2809c">  <td>22/01/08 10:14:32</td>   <td>-6589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registrationFieldValidation()[pri:1, instance:testcases.TC002_Registration@43a0cee9]">registrationFieldValidation</td> 
-  <td>main@733672688</td>   <td></td> </tr>
+<tr bgcolor="707e96">  <td>22/01/15 10:12:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:testscenarios.TC002_Registration@2f0a87b3]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-2@1823425950</td>   <td></td> </tr>
+<tr bgcolor="707e96">  <td>22/01/15 10:12:59</td>   <td>-580</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:testscenarios.TC001_Login@4c762604]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@2008864050</td>   <td></td> </tr>
+<tr bgcolor="707e96">  <td>22/01/15 10:13:00</td>   <td>1076</td> <td title="&lt;&lt;BaseClass.flushReport()[pri:0, instance:testscenarios.TC001_Login@4c762604]">&lt;&lt;flushReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@736778932</td>   <td></td> </tr>
+<tr bgcolor="707e96">  <td>22/01/15 10:12:33</td>   <td>-26617</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.invokeBrowser()[pri:0, instance:testscenarios.TC002_Registration@2f0a87b3]">&gt;&gt;invokeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-2@1823425950</td>   <td></td> </tr>
+<tr bgcolor="707e96">  <td>22/01/15 10:12:33</td>   <td>-26618</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.invokeBrowser()[pri:0, instance:testscenarios.TC001_Login@4c762604]">&gt;&gt;invokeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@2008864050</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/15 10:12:40</td>   <td>-18861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Login.loginFieldValidation()[pri:1, instance:testscenarios.TC001_Login@4c762604]">loginFieldValidation</td> 
+  <td>TestNG-test=Test-1@2008864050</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/15 10:12:54</td>   <td>-4689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Login.loginWithInValidCredential()[pri:3, instance:testscenarios.TC001_Login@4c762604]">loginWithInValidCredential</td> 
+  <td>TestNG-test=Test-1@2008864050</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/15 10:12:51</td>   <td>-8353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Login.loginWithValidCredential(java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC001_Login@4c762604]">loginWithValidCredential</td> 
+  <td>TestNG-test=Test-1@2008864050</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/15 10:12:51</td>   <td>-8353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Login.loginWithValidCredential(java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC001_Login@4c762604]">loginWithValidCredential</td> 
+  <td>TestNG-test=Test-1@2008864050</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/15 10:12:51</td>   <td>-8353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Login.loginWithValidCredential(java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC001_Login@4c762604]">loginWithValidCredential</td> 
+  <td>TestNG-test=Test-1@2008864050</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>22/01/15 10:12:54</td>   <td>-4835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registerWithMandatoryField(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC002_Registration@2f0a87b3]">registerWithMandatoryField</td> 
+  <td>TestNG-test=Test-2@1823425950</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>22/01/15 10:12:54</td>   <td>-4835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registerWithMandatoryField(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC002_Registration@2f0a87b3]">registerWithMandatoryField</td> 
+  <td>TestNG-test=Test-2@1823425950</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>22/01/15 10:12:54</td>   <td>-4835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registerWithMandatoryField(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:testscenarios.TC002_Registration@2f0a87b3]">registerWithMandatoryField</td> 
+  <td>TestNG-test=Test-2@1823425950</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>22/01/15 10:12:39</td>   <td>-19944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_Registration.registrationFieldValidation()[pri:1, instance:testscenarios.TC002_Registration@2f0a87b3]">registrationFieldValidation</td> 
+  <td>TestNG-test=Test-2@1823425950</td>   <td></td> </tr>
+<tr bgcolor="707e96">  <td>22/01/15 10:12:32</td>   <td>-26789</td> <td title="&gt;&gt;BaseClass.reportInit()[pri:0, instance:testscenarios.TC001_Login@4c762604]">&gt;&gt;reportInit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@736778932</td>   <td></td> </tr>
+<tr bgcolor="84f66b">  <td>22/01/15 10:12:33</td>   <td>-26652</td> <td>&nbsp;</td><td title="&gt;&gt;TC001_Login.testCasesetUp()[pri:0, instance:testscenarios.TC001_Login@4c762604]">&gt;&gt;testCasesetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@736778932</td>   <td></td> </tr>
+<tr bgcolor="e2809c">  <td>22/01/15 10:12:33</td>   <td>-26651</td> <td>&nbsp;</td><td title="&gt;&gt;TC002_Registration.testCasesetUp()[pri:0, instance:testscenarios.TC002_Registration@2f0a87b3]">&gt;&gt;testCasesetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@736778932</td>   <td></td> </tr>
 </table>
